# qde-systems-infrastructure

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
architecture/: deterministic-cycle.md  public-boundary.md  safety-boundaries.md
examples/: run_execution_cycle.py  run_qde_systems_validation.py
execution_infrastructure/: __init__.py  audit_ledger.py  execution_cycle.py  execution_plan.py  market_state.py  risk_policy.py
qde_systems_infrastructure/: __init__.py  audit_trail.py  models.py  portfolio_scorecard.py  validation_pipeline.py
tests/: test_audit_ledger.py  test_audit_trail.py  test_deterministic_output.py  test_execution_cycle.py  test_execution_plan.py  test_qde_public_validation.py  test_risk_policy.py
